Join message only shows on join and not every level load (Bug)